update form, fix alignment in customerview

--- a/src/styles/product-card.css
+++ b/src/styles/product-card.css
@@ -11,7 +11,7 @@
 }
 
 .product_info a:hover {
-  color: inherit;
+  color: yellow;
 }
 
 .product_info span {
